--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.14.1",
+    "react-quill": "^2.0.0",
     "slugify": "^1.6.6"
   },
   "description": "",
