--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-
-  "dev": "nodemon --max-old-space-size=2048 index.js",
-
-  "start": "node --max-old-space-size=2048 index.js",
-
+    "dev": "nodemon --max-old-space-size=2048 index.js",
+    "start": "node --max-old-space-size=2048 index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.16.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^15.0.11",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.14.1",
     "react-quill": "^2.0.0",
@@ -29,6 +29,7 @@
   },
   "description": "",
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "nodemon": "^3.1.9"
   }
 }
